Closed
Bug 254843
Opened 22 years ago
Closed 22 years ago
eToken_script is unused
Categories
(Core :: DOM: HTML Parser, defect)
Tracking
()
RESOLVED
FIXED
mozilla1.8beta1
People
(Reporter: Biesinger, Assigned: csthomas)
References
()
Details
Attachments
(1 file, 1 obsolete file)
|
12.05 KB,
patch
|
peterv
:
review+
peterv
:
superreview+
|
Details | Diff | Splinter Review |
eToken_script is only used in the token impl.
| Reporter | ||
Comment 1•22 years ago
|
||
same for eToken_style:
http://lxr.mozilla.org/seamonkey/search?string=eToken_style
| Reporter | ||
Comment 2•22 years ago
|
||
skippedcontent is even more unused:
http://lxr.mozilla.org/seamonkey/search?string=eToken_skippedcontent
| Reporter | ||
Comment 3•22 years ago
|
||
same for eToken_error:
http://lxr.mozilla.org/seamonkey/search?string=eToken_error
| Reporter | ||
Comment 4•22 years ago
|
||
(and, of course, the token impls for those - CStyleToken etc.)
| Assignee | ||
Comment 5•22 years ago
|
||
| Assignee | ||
Updated•22 years ago
|
Attachment #155890 -
Flags: review?(bzbarsky)
Comment 6•22 years ago
|
||
Comment on attachment 155890 [details] [diff] [review]
Patch v1
r+sr=bzbarsky. Is it just me, or is nsParserError also unused now?
Attachment #155890 -
Flags: superreview+
Attachment #155890 -
Flags: review?(bzbarsky)
Attachment #155890 -
Flags: review+
| Assignee | ||
Comment 7•22 years ago
|
||
nsParserError.h is no longer used.
| Assignee | ||
Updated•22 years ago
|
Attachment #155890 -
Attachment is obsolete: true
| Assignee | ||
Updated•22 years ago
|
Status: NEW → ASSIGNED
OS: Linux → All
| Assignee | ||
Updated•22 years ago
|
Attachment #155996 -
Flags: superreview?(jst)
Attachment #155996 -
Flags: review?(jst)
| Assignee | ||
Updated•22 years ago
|
Target Milestone: --- → mozilla1.8beta
| Assignee | ||
Updated•22 years ago
|
Attachment #155996 -
Flags: superreview?(jst)
Attachment #155996 -
Flags: superreview?(bryner)
Attachment #155996 -
Flags: review?(peterv)
Attachment #155996 -
Flags: review?(jst)
Comment 8•22 years ago
|
||
Comment on attachment 155996 [details] [diff] [review]
Patch v2
Don't forget to cvs rm nsParserError.h
Attachment #155996 -
Flags: superreview?(bryner)
Attachment #155996 -
Flags: superreview+
Attachment #155996 -
Flags: review?(peterv)
Attachment #155996 -
Flags: review+
| Assignee | ||
Comment 9•22 years ago
|
||
Timeless checked in it.
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•