Bug 254843 eToken_script is unused patch by cst@andrew.cmu.edu r=peterv sr=peterv